--- a/src/Main.css
+++ b/src/Main.css
@@ -119,7 +119,10 @@
 .chatRoom .right {
     width: 73%;
     height: 100%;
-    background-color: blue;
+    background-image: url('../public/img/chatBackground.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .chatRoom .left .top {
