--- a/src/Main.css
+++ b/src/Main.css
@@ -123,6 +123,61 @@
     display: flex;
     gap: 10px;
     padding: 12px 18px;
+    position: relative;
+}
+
+.menuModal {
+    width: 0px;
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    border-radius: 10px;
+    padding: 5px 5px 10px;
+    background-color: #181818;
+    /* background-color: violet; */
+}
+
+#menuModal {
+    width: 300px;
+    display: flex;
+    top: 100%;
+}
+
+.menuModal button {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    border-radius: 5px;
+    padding: 8px 15px;
+    border: none;
+    color: white;
+    user-select: none;
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.menuModal button:hover {
+    background-color: #212121;
+}
+
+.menuModal span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.menuModal p {
+    font-weight: 700;
+    font-size: 18px;
+}
+
+.menuModal h2 {
+    margin: 0 auto;
+    padding: 10px 0px 0px;
+    font-size: 18px;
+    color: silver;
 }
 
 .chatRoom .top .menu span {
@@ -232,20 +287,28 @@
 .chatRoom .right {
     width: 73%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-image: url('../public/img/chatRoomBackground.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
     padding: 0px 0px 0px .5px;
 }
 
 .right .top {
-    width: 100%;
+    width: 99.9%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 8px 15px;
     color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
     background-color: #212121;
 }
 
@@ -265,7 +328,6 @@
     border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
-    background-color: blue;
 }
 
 .right .top .profileName {
@@ -274,4 +336,89 @@
 
 .right .top .profileTitle .lastOnline {
     color: silver;
+}
+
+.userMessage {
+    width: 65%;
+    height: 100%;
+    position: relative;
+    /* background-color: blue; */
+}
+
+.sendMessage {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    display: flex;
+    gap: 10px;
+    /* background-color: red; */
+}
+
+.sendMessage button span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+.smContent {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 0px 15px;
+    background-color: #212121;
+}
+
+.smContent textarea {
+    width: 100%;
+    font-size: 20px;
+    padding: 0px 10px;
+    color: white;
+    border: none;
+    outline: none;
+    resize: none;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0);
+}
+
+.smContent .menu span {
+    color: silver;
+}
+
+.sendBtn {
+    width: 65px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: #8774E1;
+}
+
+.sendBtn span {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+
+.switchDarkmode input {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.switchDarkmode span:last-child {
+    order: -1;
+    color: white;
+}
+
+.error {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: red;
 }
