--- a/src/Main.css
+++ b/src/Main.css
@@ -459,7 +459,29 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
     color: red;
+}
+
+.error span {
+    font-size: 100px;
+}
+
+.error h1 {
+    width: 30%;
+    font-size: 25px;
+    text-align: center;
+}
+
+.error button {
+    font-size: 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    user-select: none;
+    color: #8774E1;
+    background-color: rgba(255, 255, 255, 0);
 }
